MacViews/a11y: Mark Views as invisible if their parents are invisible.

Currently, only Views returning false from View::visible() will be marked
invisible to a11y clients. This doesn't account for all invisible Views, since
Views which have an invisible ancestor will also be invisible, but still return
true from View::visible(). Account for this when tagging Views invisible for
a11y by switching to View::IsDrawn() instead.

MacViews a11y already ignores invisible Views, so this will fix issues where
a11y clients are seeing invisible controls.

BUG=657848, 660230
TEST=On Mac, with the #secondary-ui-md flag turned on, open the OIB by clicking
the icon on the left of the URL, then open the collected cookies dialog by
clicking the link under "Cookies", which should read "<X> in use". Turn on
VoiceOver by pressing Cmd+F5 and navigate through the contents of the "Allowed"
tab with VO by pressing Ctrl+Right Arrow. Verify it doesn't read out controls
that belong to the "Blocked" tab.

Review-Url: https://codereview.chromium.org/2601883002
Cr-Commit-Position: refs/heads/master@{#441001}

Former-commit-id: 452d2878e6c634245c5757fc0549876e4631722c